bk_ida/gccida/c0/df_bb_reg_info_compute
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_info_compute/src/df.c:2294:20: error: expected identifier or '('
unsigned __int64 *(short *)0x; // [rsp+30h] [rbp-80h] 
                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_info_compute/src/df.c:2294:20: error: expected ')'
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_info_compute/src/df.c:2294:19: note: to match this '('
unsigned __int64 *(short *)0x; // [rsp+30h] [rbp-80h] 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_info_compute/src/df.c:2295:16: error: expected identifier or '('
unsigned int *(short *)0xnum_; // [rsp+3Ch] [rbp-74h] 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_info_compute/src/df.c:2295:16: error: expected ')'
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_info_compute/src/df.c:2295:15: note: to match this '('
unsigned int *(short *)0xnum_; // [rsp+3Ch] [rbp-74h] 
              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_info_compute/src/df.c:2306:4: error: expected ';' after expression
rtx insn; // [rsp+80h] [rbp-30h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_info_compute/src/df.c:2306:5: error: use of undeclared identifier 'insn'
rtx insn; // [rsp+80h] [rbp-30h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_info_compute/src/df.c:2309:18: error: expected identifier or '('
 struct reg_info = df_0->regs; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_info_compute/src/df.c:2311:7: error: use of undeclared identifier 'insn'
for ( insn = bb->end; ; insn = ( rtx)insn[1] ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_info_compute/src/df.c:2311:25: error: use of undeclared identifier 'insn'
for ( insn = bb->end; ; insn = ( rtx)insn[1] ) 
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_info_compute/src/df.c:2311:38: error: expected ')'
for ( insn = bb->end; ; insn = ( rtx)insn[1] ) 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_info_compute/src/df.c:2311:5: note: to match this '('
for ( insn = bb->end; ; insn = ( rtx)insn[1] ) 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_info_compute/src/df.c:2314:6: error: use of undeclared identifier 'insn'
if ( insn ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_info_compute/src/df.c:2315:6: error: use of undeclared identifier 'insn'
v5 = insn != ( rtx)bb->head[1]; 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_info_compute/src/df.c:2318:7: error: use of undeclared identifier 'insn'
uid = insn->fld[0].rtuint; 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_info_compute/src/df.c:2319:47: error: use of undeclared identifier 'insn'
if ( rtx_class[( unsigned __int16)*( _DWORD *)insn] == 105 ) 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_info_compute/src/df.c:2345:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_info_compute/src/df.c:2349:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_info_compute/src/df.c:2353:20: error: invalid suffix 'xnum_' on integer constant
while ( *(short *)0xnum_ < 2 ) 
                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_info_compute/src/df.c:2355:12: error: invalid suffix 'x' on integer constant
*(short *)0x = ptr_->bits[*(short *)0xnum_]; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_info_compute/src/df.c:2355:38: error: invalid suffix 'xnum_' on integer constant
*(short *)0x = ptr_->bits[*(short *)0xnum_]; 
                                     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/df_bb_reg_info_compute/src/obj/df.o] Error 1
